--- a/index.html
+++ b/index.html
@@ -1,146 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>UK Trekking Dashboard – Live Weather</title>
-  <style>
-    :root{
-      --bg:#0e1116;--panel:#151a23;--line:#242b38;
-      --text:#e9edf3;--muted:#a9b3c3;
-      --good:#25c28a;--warn:#ffc24d;--bad:#ff4d4f;--accent:#46a3ff;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;background:var(--bg);color:var(--text);
-      font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial;
-    }
-    header{padding:16px 18px;border-bottom:1px solid var(--line)}
-    h1{margin:0 0 4px 0;font-size:20px}
-    .sub{color:var(--muted);font-size:13px}
-
-    /* 2-column grid */
-    .grid{
-      display:grid;gap:20px;padding:16px;
-      grid-template-columns:repeat(2,minmax(420px,1fr));
-      justify-content:center;align-items:start;max-width:1400px;margin:0 auto;
-    }
-    @media (max-width:980px){ .grid{grid-template-columns:1fr;} }
-
-    .card{
-      background:var(--panel);border:1px solid var(--line);
-      border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16;
-      display:flex;flex-direction:column;height:100%;
-    }
-    .row{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:6px}
-    .name{font-weight:700}
-    .right{display:flex;align-items:center;gap:10px}
-    .pill{border:1px solid var(--line);border-radius:999px;padding:4px 10px;font-size:12px}
-    .good{color:var(--good);border-color:color-mix(in oklab,var(--good),#000 70%)}
-    .warn{color:var(--warn);border-color:color-mix(in oklab,var(--warn),#000 70%)}
-    .bad{color:var(--bad);border-color:color-mix(in oklab,var(--bad),#000 70%)}
-
-    /* BIG circular score badge */
-    .badge{
-      width:48px;height:48px;border-radius:50%;
-      display:flex;align-items:center;justify-content:center;
-      font-weight:800;font-size:16px;color:#fff;
-      box-shadow:0 0 0 2px #00000033, inset 0 -3px 8px #00000033;
-    }
-    .badge.good{background:var(--good)}
-    .badge.warn{background:var(--warn);color:#111}
-    .badge.bad{background:var(--bad)}
-
-    .kpis{
-      display:grid;grid-template-columns:repeat(2,minmax(0,1fr));
-      gap:10px;margin:10px 0 12px;min-height:100px
-    }
-    .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px}
-    .k b{display:block;font-size:16px}
-
-    .days{
-      margin-top:auto;display:grid;gap:8px;
-      grid-template-columns:repeat(6,1fr);min-height:132px
-    }
-    .d{
-      background:#0c1016;border:1px solid var(--line);
-      border-radius:10px;padding:10px;display:flex;
-      flex-direction:column;justify-content:space-between;min-height:120px
-    }
-    .dt{font-size:12px;color:var(--muted)}
-    .wx{display:flex;align-items:center;gap:8px}
-    .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
-    .t{font-weight:600}
-    .tiny{font-size:12px;color:var(--muted)}
-    footer{padding:14px 16px;color:var(--muted);font-size:12px}
-    .spinner{width:16px;height:16px;border-radius:999px;border:2px solid var(--line);
-      border-top-color:var(--accent);animation:spin .8s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
-    .err{color:var(--bad);font-size:12px;margin-top:8px}
-    .src a{color:var(--accent);text-decoration:none}
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>UK Trekking Dashboard – Live Weather (Top 12)</title>
+<style>
+  :root{
+    --bg:#0e1116;--panel:#151a23;--line:#242b38;
+    --text:#e9edf3;--muted:#a9b3c3;
+    --good:#25c28a;--warn:#ffc24d;--bad:#ff4d4f;--accent:#46a3ff;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;background:var(--bg);color:var(--text);
+    font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+  header{padding:16px 18px;border-bottom:1px solid var(--line)}
+  h1{margin:0 0 4px 0;font-size:20px}
+  .sub{color:var(--muted);font-size:13px}
+  /* 2-column grid */
+  .grid{
+    display:grid;gap:20px;padding:16px;
+    grid-template-columns:repeat(2,minmax(420px,1fr));
+    justify-content:center;align-items:start;max-width:1400px;margin:0 auto;
+  }
+  @media (max-width:980px){ .grid{grid-template-columns:1fr;} }
+  .card{
+    background:var(--panel);border:1px solid var(--line);
+    border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16;
+    display:flex;flex-direction:column;height:100%;
+  }
+  .row{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:6px}
+  .name{font-weight:700}
+  .pill{border:1px solid var(--line);border-radius:999px;padding:4px 10px;font-size:12px}
+  .good{color:var(--good);border-color:#1a7257}
+  .warn{color:#dca11f;border-color:#4b3d12}
+  .bad{color:var(--bad);border-color:#6d2324}
+  /* circular score badge */
+  .badge{
+    width:48px;height:48px;border-radius:50%;
+    display:flex;align-items:center;justify-content:center;
+    font-weight:800;font-size:16px;color:#fff;
+    box-shadow:0 0 0 2px #00000033, inset 0 -3px 8px #00000033;
+  }
+  .badge.good{background:var(--good)}
+  .badge.warn{background:var(--warn);color:#111}
+  .badge.bad{background:var(--bad)}
+  .right{display:flex;align-items:center;gap:10px}
+  .kpis{
+    display:grid;grid-template-columns:repeat(2,minmax(0,1fr));
+    gap:10px;margin:10px 0 12px;min-height:100px
+  }
+  .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px}
+  .k b{display:block;font-size:16px}
+  .days{
+    margin-top:auto;display:grid;gap:8px;
+    grid-template-columns:repeat(6,1fr);min-height:132px
+  }
+  .d{
+    background:#0c1016;border:1px solid var(--line);
+    border-radius:10px;padding:10px;display:flex;
+    flex-direction:column;justify-content:space-between;min-height:120px
+  }
+  .dt{font-size:12px;color:var(--muted)}
+  .wx{display:flex;align-items:center;gap:8px}
+  .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
+  .t{font-weight:600}
+  .tiny{font-size:12px;color:var(--muted)}
+  footer{padding:14px 16px;color:var(--muted);font-size:12px}
+  .spinner{width:16px;height:16px;border-radius:999px;border:2px solid var(--line);
+    border-top-color:var(--accent);animation:spin .8s linear infinite}
+  @keyframes spin{to{transform:rotate(360deg)}}
+  .err{color:var(--bad);font-size:12px;margin-top:8px}
+  .src a{color:var(--accent);text-decoration:none}
+</style>
 </head>
 <body>
 <header>
-  <h1>UK Trekking Dashboard – Live Weather</h1>
+  <h1>UK Trekking Dashboard – Live Weather (Top 12)</h1>
   <div class="sub">Sorted by suitability · Data from Open-Meteo · Updated live</div>
 </header>
 
 <section class="grid" id="cards"></section>
 
 <footer>
-  <span class="src">Built with <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a>. Tweak thresholds in <code>scoreSuitability()</code>.</span>
+  <span class="src">Built with <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a>. Adjust regions or thresholds in <code>scoreSuitability()</code>.</span>
 </footer>
 
 <script>
-/* --- Regions (comprehensive UK set; tweak coords as needed) --- */
+/* ---------- Top 12 Regions ---------- */
 const regions = [
-  { name:"Upper Basildon (RG8 8NT)", lat:51.481, lon:-1.142 },
-
-  // South & Midlands
-  { name:"South Downs & Chilterns", lat:51.000, lon:-0.900 },
-  { name:"New Forest (Lyndhurst)", lat:50.872, lon:-1.576 },
-  { name:"Cotswolds (Stow-on-the-Wold)", lat:51.930, lon:-1.720 },
-  { name:"Malvern Hills", lat:52.110, lon:-2.330 },
-  { name:"Mendip Hills (Cheddar)", lat:51.280, lon:-2.770 },
-
-  // South West
-  { name:"Dartmoor (Princetown)", lat:50.546, lon:-3.990 },
-  { name:"Exmoor (Simonsbath)", lat:51.120, lon:-3.690 },
-  { name:"Bodmin Moor (Minions)", lat:50.517, lon:-4.455 },
-
-  // Wales
-  { name:"Gower (Rhossili)", lat:51.560, lon:-4.290 },
-  { name:"Pembrokeshire Coast (St Davids)", lat:51.880, lon:-5.270 },
-  { name:"Brecon Beacons (Storey Arms)", lat:51.885, lon:-3.471 },
-  { name:"Black Mountains (Crickhowell)", lat:51.860, lon:-3.140 },
+  { name:"Upper Basildon (RG8 8NT)",   lat:51.481,  lon:-1.142 },
+  { name:"South Downs & Chilterns",    lat:51.000,  lon:-0.900 },
+  { name:"Peak District (Edale)",      lat:53.364,  lon:-1.816 },
   { name:"Snowdonia / Eryri (Llanberis)", lat:53.118, lon:-4.127 },
-
-  // North & Midlands England
-  { name:"Peak District (Edale)", lat:53.364, lon:-1.816 },
-  { name:"Yorkshire Dales (Settle)", lat:54.068, lon:-2.278 },
-  { name:"North York Moors (Helmsley)", lat:54.245, lon:-1.056 },
-  { name:"Howgill Fells (Sedbergh)", lat:54.322, lon:-2.527 },
+  { name:"Lake District (Keswick)",    lat:54.6039, lon:-3.1347 },
+  { name:"Yorkshire Dales (Settle)",   lat:54.068,  lon:-2.278 },
   { name:"Forest of Bowland (Dunsop Bridge)", lat:53.943, lon:-2.502 },
-  { name:"Lake District (Keswick)", lat:54.6039, lon:-3.1347 },
-
-  // East England
-  { name:"Norfolk Broads (Wroxham)", lat:52.710, lon:1.410 },
-  { name:"Lincolnshire Wolds (Louth)", lat:53.366, lon:-0.004 },
-  { name:"Suffolk Coast & Heaths (Dunwich)", lat:52.280, lon:1.620 },
-
-  // Scotland
-  { name:"Pentland Hills (Flotterstone)", lat:55.850, lon:-3.230 },
-  { name:"Scottish Borders (Peebles)", lat:55.652, lon:-3.188 },
-  { name:"Loch Lomond & The Trossachs (Callander)", lat:56.244, lon:-4.216 },
-  { name:"Cairngorms (Aviemore)", lat:57.190, lon:-3.830 },
-  { name:"Northumberland (Cheviot Hills, Wooler)", lat:55.548, lon:-2.013 },
-
-  // Northern Ireland
-  { name:"Mourne Mountains (Newcastle)", lat:54.211, lon:-5.889 }
+  { name:"Brecon Beacons (Storey Arms)", lat:51.885, lon:-3.471 },
+  { name:"North York Moors (Helmsley)",lat:54.245,  lon:-1.056 },
+  { name:"Dartmoor (Princetown)",      lat:50.546,  lon:-3.990 },
+  { name:"Exmoor (Simonsbath)",        lat:51.120,  lon:-3.690 },
+  { name:"Norfolk Broads (Wroxham)",   lat:52.710,  lon: 1.410 }
 ];
 
-/* --- Weather icons (inline SVG) --- */
+/* ---------- Icons (inline SVG, high contrast) ---------- */
 const I={
   sun:'<svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
   cloud:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
@@ -150,7 +112,6 @@ const I={
   snow:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95" fill="#bde0ff"><circle cx="7" cy="17" r="1.2"/><circle cx="12" cy="17" r="1.2"/><circle cx="17" cy="17" r="1.2"/></g></svg>',
   fog:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><rect x="5" y="16" width="14" height="1.8" rx=".9"/><rect x="4" y="19" width="12" height="1.8" rx=".9"/></g></svg>'
 };
-
 function codeToIcon(code){
   if([0].includes(code)) return I.sun;
   if([1,2,3].includes(code)) return I.cloud;
@@ -162,20 +123,16 @@ function codeToIcon(code){
   return I.cloud;
 }
 
-/* --- Improved suitability scoring (never zero; shows "<10") --- */
-function scoreSuitability({ wind, precip, tmax, tmin, cloud }) {
+/* ---------- Scoring (never zero; shows "<10") ---------- */
+function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
   let s = 100;
-  // Wind (km/h)
   if (wind > 35) s -= (wind - 35) * 0.8;
   if (wind > 50) s -= (wind - 50) * 0.7;
-  // Rain (mm)
   if (precip > 0)  s -= Math.min(precip, 10) * 1.0;
   if (precip > 10) s -= (precip - 10) * 2.0;
-  // Temp & cloud
   if (tmax < 2 || tmin < -2) s -= 10;
   if (tmax > 24) s -= (tmax - 24) * 1.0;
   if (cloud > 90) s -= 3;
-  // Clamp and present
   s = Math.round(Math.max(5, Math.min(100, s)));
   const show = s <= 10 ? "<10" : s;
   const label = s >= 75 ? "Very good" : s >= 55 ? "Good" : s >= 40 ? "Fair" : "High risk";
@@ -183,9 +140,9 @@ function scoreSuitability({ wind, precip, tmax, tmin, cloud }) {
   return { s, label, cls, show };
 }
 
+/* ---------- Fetch with basic error guard ---------- */
 const cardsEl = document.getElementById("cards");
 function el(tag, cls, txt){ const e=document.createElement(tag); if(cls) e.className=cls; if(txt) e.textContent=txt; return e; }
-
 async function fetchRegion(r){
   const url = new URL("https://api.open-meteo.com/v1/forecast");
   url.search = new URLSearchParams({
@@ -198,7 +155,8 @@ async function fetchRegion(r){
   return res.json();
 }
 
-async function buildAll(){
+/* ---------- Build & render ---------- */
+(async function buildAll(){
   const results=[];
   for(const r of regions){
     try{
@@ -210,25 +168,32 @@ async function buildAll(){
       const cloudProxy = [45,48].includes(code) ? 95 : ([0].includes(code) ? 15 : 60);
       const score = scoreSuitability({ wind, precip, tmax, tmin, cloud: cloudProxy });
       results.push({ ...r, data, score });
-    }catch(e){ console.error(r.name, e); }
+    }catch(e){
+      console.error(r.name, e);
+      results.push({ ...r, error:true, score:{s:5,label:"High risk",cls:"bad",show:"<10"} });
+    }
   }
   results.sort((a,b)=> b.score.s - a.score.s);   // best → worst
   results.forEach(renderRegion);
-}
+})();
 
 function renderRegion(r){
-  const d = r.data.daily;
   const card = el("div","card");
-  const top = el("div","row");
-
-  const right = el("div","right");
-  const pill  = el("span",`pill ${r.score.cls}`, r.score.label);
-  const badge = el("div",`badge ${r.score.cls}`, String(r.score.show));
-  right.append(pill, badge);
-
+  const top  = el("div","row");
+  const right= el("div","right");
+  const pill = el("span",`pill ${r.score.cls}`, r.score.label);
+  const badge= el("div",`badge ${r.score.cls}`, String(r.score.show));
+  right.append(pill,badge);
   top.append(el("div","name", r.name), right);
   card.append(top);
 
+  if(r.error){
+    card.append(el("div","err","Couldn’t load data right now."));
+    cardsEl.append(card);
+    return;
+  }
+
+  const d = r.data.daily;
   const kpis = el("div","kpis");
   kpis.innerHTML =
     `<div class='k'><span class='tiny'>Suitability</span><b>${r.score.label} (${r.score.show})</b></div>
@@ -244,7 +209,8 @@ function renderRegion(r){
     const dt = new Date(d.time[i]);
     cell.append(el("div","dt", dt.toLocaleDateString(undefined, fmt)));
     const wx = el("div","wx");
-    const ic = el("span"); ic.innerHTML = codeToIcon(d.weather_code[i]);
+    const ic = el("span");
+    ic.innerHTML = codeToIcon(d.weather_code[i]);
     wx.append(ic, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
     cell.append(wx);
     cell.append(el("div","tiny", `${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
@@ -253,8 +219,6 @@ function renderRegion(r){
   card.append(days);
   cardsEl.append(card);
 }
-
-buildAll();
 </script>
 </body>
 </html>
