--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
   }
   .dt{font-size:12px;color:var(--muted)}
   .wx{display:flex;align-items:center;gap:8px}
+  /* icon colours per day score via currentColor */
   .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
+  .ico.good{color:var(--good)}
+  .ico.warn{color:var(--warn)}
+  .ico.bad{color:var(--bad)}
   .t{font-weight:600}
   .tiny{font-size:12px;color:var(--muted)}
   footer{padding:14px 16px;color:var(--muted);font-size:12px}
@@ -76,7 +80,7 @@
 <body>
 <header>
   <h1>UK Trekking Dashboard – Live Weather (Top 12)</h1>
-  <div class="sub">Sorted by suitability · Data from Open-Meteo · Updated live</div>
+  <div class="sub">Sorted by suitability · Per-day coloured icons · Open-Meteo data</div>
 </header>
 
 <section class="grid" id="cards"></section>
@@ -102,25 +106,25 @@ const regions = [
   { name:"Norfolk Broads (Wroxham)",   lat:52.710,  lon: 1.410 }
 ];
 
-/* ---------- Icons (inline SVG, high contrast) ---------- */
+/* ---------- Icons (use currentColor so we can tint per-day) ---------- */
 const I={
-  sun:'<svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
-  cloud:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
-  rain:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="#7cc7ff" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
-  drizzle:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="#9fd3ff" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
-  storm:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="#ffd54a" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
-  snow:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95" fill="#bde0ff"><circle cx="7" cy="17" r="1.2"/><circle cx="12" cy="17" r="1.2"/><circle cx="17" cy="17" r="1.2"/></g></svg>',
-  fog:'<svg viewBox="0 0 24 24" class="ico" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><rect x="5" y="16" width="14" height="1.8" rx=".9"/><rect x="4" y="19" width="12" height="1.8" rx=".9"/></g></svg>'
+  sun:'<svg viewBox="0 0 24 24" class="svg" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
+  cloud:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
+  rain:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
+  drizzle:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
+  storm:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
+  snow:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><circle cx="7" cy="17" r="1.2" fill="currentColor"/><circle cx="12" cy="17" r="1.2" fill="currentColor"/><circle cx="17" cy="17" r="1.2" fill="currentColor"/></g></svg>',
+  fog:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><rect x="5" y="16" width="14" height="1.8" rx=".9"/><rect x="4" y="19" width="12" height="1.8" rx=".9"/></g></svg>'
 };
-function codeToIcon(code){
-  if([0].includes(code)) return I.sun;
-  if([1,2,3].includes(code)) return I.cloud;
-  if([45,48].includes(code)) return I.fog;
-  if([51,53,55,56,57].includes(code)) return I.drizzle;
-  if([61,63,65,66,67,80,81,82].includes(code)) return I.rain;
-  if([71,73,75,77,85,86].includes(code)) return I.snow;
-  if([95,96,99].includes(code)) return I.storm;
-  return I.cloud;
+function codeToIconKey(code){
+  if([0].includes(code)) return 'sun';
+  if([1,2,3].includes(code)) return 'cloud';
+  if([45,48].includes(code)) return 'fog';
+  if([51,53,55,56,57].includes(code)) return 'drizzle';
+  if([61,63,65,66,67,80,81,82].includes(code)) return 'rain';
+  if([71,73,75,77,85,86].includes(code)) return 'snow';
+  if([95,96,99].includes(code)) return 'storm';
+  return 'cloud';
 }
 
 /* ---------- Scoring (never zero; shows "<10") ---------- */
@@ -137,10 +141,10 @@ function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
   const show = s <= 10 ? "<10" : s;
   const label = s >= 75 ? "Very good" : s >= 55 ? "Good" : s >= 40 ? "Fair" : "High risk";
   const cls = s >= 55 ? "good" : s >= 40 ? "warn" : "bad";
-  return { s, label, cls, show };
+  return { s, show, label, cls };
 }
 
-/* ---------- Fetch with basic error guard ---------- */
+/* ---------- Fetch ---------- */
 const cardsEl = document.getElementById("cards");
 function el(tag, cls, txt){ const e=document.createElement(tag); if(cls) e.className=cls; if(txt) e.textContent=txt; return e; }
 async function fetchRegion(r){
@@ -162,18 +166,21 @@ async function fetchRegion(r){
     try{
       const data = await fetchRegion(r);
       const d = data.daily;
-      const tmax = d.temperature_2m_max[0], tmin = d.temperature_2m_min[0];
-      const precip = d.precipitation_sum[0], wind = d.wind_speed_10m_max[0];
-      const code = d.weather_code[0];
-      const cloudProxy = [45,48].includes(code) ? 95 : ([0].includes(code) ? 15 : 60);
-      const score = scoreSuitability({ wind, precip, tmax, tmin, cloud: cloudProxy });
-      results.push({ ...r, data, score });
+      // Today score for sorting
+      const s0 = scoreSuitability({
+        wind:d.wind_speed_10m_max[0],
+        precip:d.precipitation_sum[0],
+        tmax:d.temperature_2m_max[0],
+        tmin:d.temperature_2m_min[0],
+        cloud:[45,48].includes(d.weather_code[0])?95:([0].includes(d.weather_code[0])?15:60)
+      });
+      results.push({ ...r, data, today:s0 });
     }catch(e){
       console.error(r.name, e);
-      results.push({ ...r, error:true, score:{s:5,label:"High risk",cls:"bad",show:"<10"} });
+      results.push({ ...r, error:true, today:{s:5,show:"<10",label:"High risk",cls:"bad"} });
     }
   }
-  results.sort((a,b)=> b.score.s - a.score.s);   // best → worst
+  results.sort((a,b)=> b.today.s - a.today.s); // best → worst
   results.forEach(renderRegion);
 })();
 
@@ -181,9 +188,8 @@ function renderRegion(r){
   const card = el("div","card");
   const top  = el("div","row");
   const right= el("div","right");
-  const pill = el("span",`pill ${r.score.cls}`, r.score.label);
-  const badge= el("div",`badge ${r.score.cls}`, String(r.score.show));
-  right.append(pill,badge);
+  right.append(el("span",`pill ${r.today.cls}`, r.today.label),
+               el("div",`badge ${r.today.cls}`, String(r.today.show)));
   top.append(el("div","name", r.name), right);
   card.append(top);
 
@@ -196,7 +202,7 @@ function renderRegion(r){
   const d = r.data.daily;
   const kpis = el("div","kpis");
   kpis.innerHTML =
-    `<div class='k'><span class='tiny'>Suitability</span><b>${r.score.label} (${r.score.show})</b></div>
+    `<div class='k'><span class='tiny'>Suitability</span><b>${r.today.label} (${r.today.show})</b></div>
      <div class='k'><span class='tiny'>Temp (max/min)</span><b>${d.temperature_2m_max[0].toFixed(0)}° / ${d.temperature_2m_min[0].toFixed(0)}°</b></div>
      <div class='k'><span class='tiny'>Wind (max)</span><b>${Math.round(d.wind_speed_10m_max[0])} km/h</b></div>
      <div class='k'><span class='tiny'>Rain (sum)</span><b>${d.precipitation_sum[0].toFixed(1)} mm</b></div>`;
@@ -205,14 +211,27 @@ function renderRegion(r){
   const days = el("div","days");
   const fmt = { weekday:"short" };
   for(let i=0;i<d.time.length;i++){
+    // per-day score to colour the icon
+    const dayScore = scoreSuitability({
+      wind: d.wind_speed_10m_max[i],
+      precip: d.precipitation_sum[i],
+      tmax: d.temperature_2m_max[i],
+      tmin: d.temperature_2m_min[i],
+      cloud: [45,48].includes(d.weather_code[i])?95:([0].includes(d.weather_code[i])?15:60)
+    });
+
     const cell = el("div","d");
     const dt = new Date(d.time[i]);
     cell.append(el("div","dt", dt.toLocaleDateString(undefined, fmt)));
+
     const wx = el("div","wx");
-    const ic = el("span");
-    ic.innerHTML = codeToIcon(d.weather_code[i]);
-    wx.append(ic, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
+    const key = codeToIconKey(d.weather_code[i]);
+    const icWrap = document.createElement("span");
+    icWrap.className = `ico ${dayScore.cls}`;
+    icWrap.innerHTML = I[key];               // SVG uses currentColor → picks up .ico.* colour
+    wx.append(icWrap, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
     cell.append(wx);
+
     cell.append(el("div","tiny", `${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
     days.append(cell);
   }
