--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>UK Trekking Dashboard – Live Weather </title>
+<title>UK Trekking Dashboard – Live Weather</title>
 <style>
   :root{
     --bg:#0e1116;--panel:#151a23;--line:#242b38;
@@ -14,15 +14,17 @@
   body{margin:0;background:var(--bg);color:var(--text);
     font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
   header{padding:16px 18px;border-bottom:1px solid var(--line)}
-  h1{margin:0 0 4px 0;font-size:20px}
+  h1{margin:0 0 6px 0;font-size:20px}
   .sub{color:var(--muted);font-size:13px}
-  /* 2-column grid */
+  .sub a{color:var(--accent);text-decoration:none}
+
   .grid{
     display:grid;gap:20px;padding:16px;
     grid-template-columns:repeat(2,minmax(420px,1fr));
     justify-content:center;align-items:start;max-width:1400px;margin:0 auto;
   }
   @media (max-width:980px){ .grid{grid-template-columns:1fr;} }
+
   .card{
     background:var(--panel);border:1px solid var(--line);
     border-radius:14px;padding:14px;box-shadow:0 1px 0 #0b0f16;
@@ -34,7 +36,7 @@
   .good{color:var(--good);border-color:#1a7257}
   .warn{color:#dca11f;border-color:#4b3d12}
   .bad{color:var(--bad);border-color:#6d2324}
-  /* circular score badge */
+
   .badge{
     width:48px;height:48px;border-radius:50%;
     display:flex;align-items:center;justify-content:center;
@@ -44,6 +46,7 @@
   .badge.good{background:var(--good)}
   .badge.warn{background:var(--warn);color:#111}
   .badge.bad{background:var(--bad)}
+
   .right{display:flex;align-items:center;gap:10px}
   .kpis{
     display:grid;grid-template-columns:repeat(2,minmax(0,1fr));
@@ -51,6 +54,7 @@
   }
   .k{border:1px solid var(--line);border-radius:10px;padding:8px 10px}
   .k b{display:block;font-size:16px}
+
   .days{
     margin-top:auto;display:grid;gap:8px;
     grid-template-columns:repeat(6,1fr);min-height:132px
@@ -62,37 +66,34 @@
   }
   .dt{font-size:12px;color:var(--muted)}
   .wx{display:flex;align-items:center;gap:8px}
-  /* icon colours per day score via currentColor */
+
+  /* per-day icon tint (clouds + light/mod rain = green) */
   .ico{width:26px;height:26px;display:inline-block;filter:drop-shadow(0 0 2px #0008)}
   .ico.good{color:var(--good)}
   .ico.warn{color:var(--warn)}
   .ico.bad{color:var(--bad)}
+
   .t{font-weight:600}
   .tiny{font-size:12px;color:var(--muted)}
   footer{padding:14px 16px;color:var(--muted);font-size:12px}
-  .spinner{width:16px;height:16px;border-radius:999px;border:2px solid var(--line);
-    border-top-color:var(--accent);animation:spin .8s linear infinite}
-  @keyframes spin{to{transform:rotate(360deg)}}
-  .err{color:var(--bad);font-size:12px;margin-top:8px}
   .src a{color:var(--accent);text-decoration:none}
 </style>
 </head>
 <body>
 <header>
   <h1>UK Trekking Dashboard – Live Weather</h1>
-  <div class="sub">Sorted by suitability · Per-day coloured icons · Open-Meteo data</div>
+  <div class="sub">Sorted by suitability · Per-day coloured icons · Data: <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a> · <a href="./regions_map.html">Map view</a></div>
 </header>
 
 <section class="grid" id="cards"></section>
 
 <footer>
-  <span class="src">Built with <a href="https://open-meteo.com/" target="_blank" rel="noreferrer">Open-Meteo</a>. Adjust regions or thresholds in <code>scoreSuitability()</code>.</span>
+  <span class="src">Tweak weights in <code>scoreSuitability()</code>.</span>
 </footer>
 
 <script>
-/* ---------- Top 12 Regions ---------- */
+/* -------- Regions (Upper Basildon removed) -------- */
 const regions = [
-  { name:"Upper Basildon (RG8 8NT)",   lat:51.481,  lon:-1.142 },
   { name:"South Downs & Chilterns",    lat:51.000,  lon:-0.900 },
   { name:"Peak District (Edale)",      lat:53.364,  lon:-1.816 },
   { name:"Snowdonia / Eryri (Llanberis)", lat:53.118, lon:-4.127 },
@@ -106,28 +107,28 @@ const regions = [
   { name:"Norfolk Broads (Wroxham)",   lat:52.710,  lon: 1.410 }
 ];
 
-/* ---------- Icons (use currentColor so we can tint per-day) ---------- */
+/* -------- Icons (inline SVG; uses currentColor) -------- */
 const I={
   sun:'<svg viewBox="0 0 24 24" class="svg" fill="none" stroke="currentColor" stroke-width="1.6"><circle cx="12" cy="12" r="4" fill="currentColor"/><g opacity=".9"><path d="M12 1v3M12 20v3M4.2 4.2l2.1 2.1M17.7 17.7l2.1 2.1M1 12h3M20 12h3M4.2 19.8l2.1-2.1M17.7 6.3l2.1-2.1"/></g></svg>',
   cloud:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 18a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 9.5c2.2 0 4 1.8 4 4S20.2 18 18 18z"/></svg>',
   rain:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><path d="M7 16l-1 3m5-3l-1 3m5-3l-1 3" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
   drizzle:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><path d="M7 16l-.6 1.5m4.6-1.5l-.6 1.5m4.6-1.5l-.6 1.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" fill="none"/></g></svg>',
   storm:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><path d="M10 16l-2 5 5-3-2 5" stroke="currentColor" stroke-width="1.8" fill="none" stroke-linejoin="round"/></svg>',
-  snow:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><circle cx="7" cy="17" r="1.2" fill="currentColor"/><circle cx="12" cy="17" r="1.2" fill="currentColor"/><circle cx="17" cy="17" r="1.2" fill="currentColor"/></g></svg>',
-  fog:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".9"><rect x="5" y="16" width="14" height="1.8" rx=".9"/><rect x="4" y="19" width="12" height="1.8" rx=".9"/></g></svg>'
+  snow:'<svg viewBox="0 0 24 24" class="svg" fill="currentColor"><path d="M7.5 14a4.5 4.5 0 0 1 0-9c.3 0 .6 0 .9.1A5.5 5.5 0 0 1 18 5.5c2.2 0 4 1.8 4 4S20.2 14 18 14z"/><g opacity=".95"><circle cx="7" cy="17" r="1.2" fill="currentColor"/><circle cx="12" cy="17" r="1.2" fill="currentColor"/><circle cx="17" cy="17" r="1.2" fill="currentColor"/></g></svg>'
 };
-function codeToIconKey(code){
+function iconKey(code){
   if([0].includes(code)) return 'sun';
   if([1,2,3].includes(code)) return 'cloud';
-  if([45,48].includes(code)) return 'fog';
+  if([45,48].includes(code)) return 'cloud';     // fog, treat as cloud icon
   if([51,53,55,56,57].includes(code)) return 'drizzle';
-  if([61,63,65,66,67,80,81,82].includes(code)) return 'rain';
+  if([61,63,65,80,81,82].includes(code)) return 'rain';
+  if([66,67].includes(code)) return 'rain';      // heavy freezing rain
   if([71,73,75,77,85,86].includes(code)) return 'snow';
   if([95,96,99].includes(code)) return 'storm';
   return 'cloud';
 }
 
-/* ---------- Scoring (never zero; shows "<10") ---------- */
+/* -------- Scoring (never zero; shows "<10") -------- */
 function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
   let s = 100;
   if (wind > 35) s -= (wind - 35) * 0.8;
@@ -144,9 +145,22 @@ function scoreSuitability({ wind, precip, tmax, tmin, cloud }){
   return { s, show, label, cls };
 }
 
-/* ---------- Fetch ---------- */
+/* -------- Helper: tint class for the day's icon -------- */
+function iconTintByWeatherCode(code){
+  // Clouds and light/medium rain → green
+  if([1,2,3,45,48].includes(code)) return 'good';
+  if([51,53,55,56,57,61,63,65,80,81,82].includes(code)) return 'good';
+  // Heavy rain/ice, storms, snow → warn/bad
+  if([66,67].includes(code)) return 'warn';
+  if([71,73,75,77,85,86].includes(code)) return 'warn';
+  if([95,96,99].includes(code)) return 'bad';
+  return 'good';
+}
+
+/* -------- Fetch & build -------- */
 const cardsEl = document.getElementById("cards");
 function el(tag, cls, txt){ const e=document.createElement(tag); if(cls) e.className=cls; if(txt) e.textContent=txt; return e; }
+
 async function fetchRegion(r){
   const url = new URL("https://api.open-meteo.com/v1/forecast");
   url.search = new URLSearchParams({
@@ -159,28 +173,25 @@ async function fetchRegion(r){
   return res.json();
 }
 
-/* ---------- Build & render ---------- */
 (async function buildAll(){
   const results=[];
   for(const r of regions){
     try{
       const data = await fetchRegion(r);
       const d = data.daily;
-      // Today score for sorting
-      const s0 = scoreSuitability({
+      const today = scoreSuitability({
         wind:d.wind_speed_10m_max[0],
         precip:d.precipitation_sum[0],
         tmax:d.temperature_2m_max[0],
         tmin:d.temperature_2m_min[0],
         cloud:[45,48].includes(d.weather_code[0])?95:([0].includes(d.weather_code[0])?15:60)
       });
-      results.push({ ...r, data, today:s0 });
+      results.push({ ...r, data, today });
     }catch(e){
-      console.error(r.name, e);
       results.push({ ...r, error:true, today:{s:5,show:"<10",label:"High risk",cls:"bad"} });
     }
   }
-  results.sort((a,b)=> b.today.s - a.today.s); // best → worst
+  results.sort((a,b)=> b.today.s - a.today.s);
   results.forEach(renderRegion);
 })();
 
@@ -194,7 +205,7 @@ function renderRegion(r){
   card.append(top);
 
   if(r.error){
-    card.append(el("div","err","Couldn’t load data right now."));
+    card.append(el("div","tiny","Couldn’t load data right now."));
     cardsEl.append(card);
     return;
   }
@@ -211,27 +222,18 @@ function renderRegion(r){
   const days = el("div","days");
   const fmt = { weekday:"short" };
   for(let i=0;i<d.time.length;i++){
-    // per-day score to colour the icon
-    const dayScore = scoreSuitability({
-      wind: d.wind_speed_10m_max[i],
-      precip: d.precipitation_sum[i],
-      tmax: d.temperature_2m_max[i],
-      tmin: d.temperature_2m_min[i],
-      cloud: [45,48].includes(d.weather_code[i])?95:([0].includes(d.weather_code[i])?15:60)
-    });
-
     const cell = el("div","d");
     const dt = new Date(d.time[i]);
     cell.append(el("div","dt", dt.toLocaleDateString(undefined, fmt)));
 
+    const tintCls = iconTintByWeatherCode(d.weather_code[i]);
     const wx = el("div","wx");
-    const key = codeToIconKey(d.weather_code[i]);
-    const icWrap = document.createElement("span");
-    icWrap.className = `ico ${dayScore.cls}`;
-    icWrap.innerHTML = I[key];               // SVG uses currentColor → picks up .ico.* colour
-    wx.append(icWrap, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
-    cell.append(wx);
+    const ic = document.createElement("span");
+    ic.className = `ico ${tintCls}`;
+    ic.innerHTML = I[iconKey(d.weather_code[i])];
 
+    wx.append(ic, el("div","t", `${d.temperature_2m_max[i].toFixed(0)}° / ${d.temperature_2m_min[i].toFixed(0)}°`));
+    cell.append(wx);
     cell.append(el("div","tiny", `${d.precipitation_sum[i].toFixed(1)} mm · ${Math.round(d.wind_speed_10m_max[i])} km/h`));
     days.append(cell);
   }
